[package]
name = "pos-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
serde = {version = "1.0.193", features=["derive"]}
serde_json = "1.0.108"
hex = "0.4.3"
chrono = "0.4.31"
rocket = "0.5.0"
rusqlite = "0.30.0"
dotenv = "0.15.0"